<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lucien.theaterbooking.DisplayMovieActivity">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Room"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seatsLeft"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/show_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_room"
            android:layout_marginTop="5dip"
            android:textColor="#343434"
            android:textSize="12sp"
            android:text="safsaf"/>
        <TextView
            android:id="@+id/show_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_date"
            android:textColor="#343434"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="safea"
            />
        <TextView
            android:id="@+id/show_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_price"
            android:textColor="#343434"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="saf"
            />
    </LinearLayout>

</LinearLayout>
